Updated Antigravity site content

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             <!-- Quick-View Modal -->
             <div id="quick-view-modal" class="modal-hidden">
                 <div class="modal-content">
-                    <h3 id="modal-title">TITLE</h3>
-                    <p id="modal-desc">Description goes here.</p>
+                    <p id="modal-desc">WELCOME TO MY PORTFOLIO</p>
                     <div id="modal-details">
                         <!-- Dynamic Content -->
                     </div>
