Updated Antigravity site content

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- Navigation -->
     <header class="glass-header">
         <nav>
-            <div class="logo">PORTFOLIO</div>
-
+            <!-- Top Right Typewriter Quote -->
+            <div id="typewriter-quote-container" class="top-right-quote"></div>
         </nav>
     </header>
 
@@ -199,6 +199,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <!-- EmailJS SDK -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <!-- TypewriterJS -->
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="src/main.js"></script>
 </body>
 
